<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.OrderFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/order_rv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:padding="6dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@id/make_order_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:itemCount="15" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_menu_item_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_medium"
        android:contentDescription="@string/add_menu_item"
        android:src="@drawable/ic_add"
        app:layout_constraintBottom_toTopOf="@id/make_order_btn"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/make_order_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:contentDescription="@string/make_an_order"
        android:text="@string/make_an_order"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/clear_order_btn"
        app:layout_constraintTop_toBottomOf="@id/order_rv" />

    <Button
        android:id="@+id/clear_order_btn"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:contentDescription="@string/clear"
        android:text="@string/clear"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/make_order_btn"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/no_items_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_items_text"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/order_rv"
        app:layout_constraintEnd_toEndOf="@id/order_rv"
        app:layout_constraintStart_toStartOf="@id/order_rv"
        app:layout_constraintTop_toTopOf="@id/order_rv" />

</androidx.constraintlayout.widget.ConstraintLayout>